# teetty

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
scripts/: bump-version.sh  publish-all.sh
src/: cli.rs  main.rs  spawn.rs
teetty/: Cargo.toml
teetty/src/: cli.rs  main.rs
teetty/tests/: basic.sh  test_basic.rs  test_stdin.rs
tests/: read.sh  test_basic.rs  test_stdin.rs
tty-spawn/: Cargo.toml  README.md
tty-spawn/src/: lib.rs
web/: .gitignore  README.md  pyproject.toml
web/src/web/: __init__.py
web/src/web/static/: demo.cast
web/src/web/templates/: index.html
