[package]
name = "teetty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.30", default-features = false, features = ["derive", "std", "help", "usage", "wrap_help"] }
nix = { version = "0.26.1", default-features = false, features = ["fs", "process", "term", "ioctl", "signal", "poll"] }
signal-hook = "0.3.14"
